--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/list.js.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/list.js.twig
@@ -1,1 +1,5 @@
-{% include 'KnpBundlesBundle:Repo:list.js.twig' with {'repos': repos, 'callback': callback} %}
+{% set array = [] %}
+{% for bundle in bundles %}
+{% set array = array|merge([bundle.toSmallArray]) %}
+{% endfor %}
+{{ '%s(%s)'|format(callback, array|json_encode)|raw }}
