--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/bigList.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/bigList.html.twig
@@ -1,1 +1,32 @@
-{% extends 'KnpBundlesBundle:Repo:bigList.html.twig' %}
+<ul class="big-list">
+    {% for bundle in bundles %}
+    <li class="bundle {% if loop.first %}first{% endif %}">
+        <div class="bundlerank">
+            {{ bundle.score }}
+        </div>
+        <div class="generals">
+            <div class="bundle-title">
+                <a href="{{ path('bundle_show', {'username': bundle.username, 'name': bundle.name}) }}" class="name">{{ bundle.name }}</a>
+            </div>
+            <p class="description">{{ bundle.description|default('−') }}</p>
+            
+            <ul class="details">
+                <li>{% trans %}bundles.list.by{% endtrans %} <a href="{{ path('user_show', {'name': bundle.username }) }}" class="owner">{{ bundle.username }}</a></li>
+                <li>{% trans %}bundles.list.lastCommit{% endtrans %} <span>{{ bundle.lastCommitAt|date('date_format'|trans) }}</span></li>
+                {% if bundle.usesTravisCi %}
+                <li class="info-travis">
+                    <a href="http://travis-ci.org/{{ bundle.username }}/{{ bundle.name }}">
+                        <img src="https://secure.travis-ci.org/{{ bundle.username }}/{{ bundle.name }}.png" alt="Travis CI"></img>
+                    </a>
+                 </li>
+                {% endif %}
+            </ul>
+        </div>
+        <div class="img">
+            {% if bundle.user.gravatarHash %}
+            <a href="{{ path('bundle_show', {'username': bundle.username, 'name': bundle.name}) }}"><img src="{{ gravatar_hash(bundle.user.gravatarHash, 50, none, 'identicon') }}" alt="{{ bundle.name }}" /></a>
+            {% endif %}
+        </div>
+    </li>
+    {% endfor %}
+</ul>
