--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/listFeatured.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/listFeatured.html.twig
@@ -3,7 +3,7 @@
     <ul class="bundles_list">
         {%- for bundle in bundles %}
         <li class="bundle">
-            <a href="{{ path('repo_show', {'username': bundle.username, 'name': bundle.name}) }}">
+            <a href="{{ path('bundle_show', {'username': bundle.username, 'name': bundle.name}) }}">
                 <span class="name">{{ bundle.name }}</span>
                 <span class="hot"><img src="{{ asset('bundles/knpbundles/images/heart.png') }}" alt="" /></span>
                 <span class="description">{{ bundle.description }}</span>
