--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Main/timeline.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Main/timeline.html.twig
@@ -3,7 +3,7 @@
     <ol class="timeline">
     {%- for commit in commits %}
         <li>
-            <a href="{{ path('repo_show', { 'username': commit.repo_username, 'name': commit.repo_name }) }}">{{ commit.repo_name }}</a>
+            <a href="{{ path('bundle_show', { 'username': commit.bundle_username, 'name': commit.bundle_name }) }}">{{ commit.bundle_name }}</a>
             {{ commit.message }}<br />
             <span>{{ commit.author }} | {{ ago(commit.committed_date) }}</span>
         </li>
