--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
@@ -15,12 +15,20 @@
                 <li>{% trans %}bundles.show.infos.created{% endtrans %} <span>{{ bundle.createdAt|date('date_format'|trans) }}</span></li>
                 <li>{% trans %}bundles.show.infos.contributors{% endtrans %} <span>{{ bundle.nbContributors }}</span></li>
                 <li>{% trans %}bundles.show.infos.followers{% endtrans %} <span>{{ bundle.nbFollowers }}</span></li>
+                <li class="info-github" title="{% trans %}bundles.show.infos.github{% endtrans %}">
+                    <a href="{{ bundle.githubUrl }}">{{ bundle.fullName }}</a>
+                </li>
                 {% if bundle.usesTravisCi %}
-                <li class="info-travis">
+                <li class="info-travis" title="{% trans %}bundles.show.infos.travis{% endtrans %}">
                     <a href="{{ bundle.travisUrl }}">
                         <img src="https://secure.travis-ci.org/{{ bundle.username }}/{{ bundle.name }}.png"></img>
                     </a>
                  </li>
+                {% endif %}
+                {% if bundle.composerName %}
+                <li class="info-composer" title="{% trans %}bundles.show.infos.composer{% endtrans %}">
+                    <a href="{{ bundle.packagistUrl }}">{{ bundle.composerName }}</a>
+                </li>
                 {% endif %}
             </ul>
         </div>
