--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/evolution.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/evolution.html.twig
@@ -41,14 +41,14 @@
             {% endfor %}
 
             var sum_chart = new google.visualization.LineChart(document.getElementById('sum_chart_div'));
-            sum_chart.draw(sum_data, {width: 960, height: 400, legend: 'none', hAxis: {showTextEvery: 1}});
+            sum_chart.draw(sum_data, {width: 960, height: 400, legend: 'none'});
 
             /** 
-             * Drawing the evolution of the number of score among time
+             * Drawing the evolution of the number of bundles among time
              */ 
             var count_data = new google.visualization.DataTable();
             count_data.addColumn('string', 'Date');
-            count_data.addColumn('number', 'Score');
+            count_data.addColumn('number', 'Number');
             count_data.addRows({{ score_counts|length }});
             {% for count in score_counts -%}
             count_data.setValue({{ loop.index0 }}, 0, '{{ count.date }}');
@@ -56,7 +56,7 @@
             {% endfor %}
 
             var count_chart = new google.visualization.LineChart(document.getElementById('count_chart_div'));
-            count_chart.draw(count_data, {width: 960, height: 400, legend: 'none', hAxis: {showTextEvery: 1}});
+            count_chart.draw(count_data, {width: 960, height: 400, legend: 'none'});
           }
         </script>
 {% endblock %}
