Move a text about Symfony2bundles directly on the website

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -74,7 +74,7 @@
                         <ul>
                             <li><a href="https://github.com/knplabs/knpbundles">{% trans %}footer.code{% endtrans %}</a></li>
                             <li><a href="{{ path('api') }}">API</a></li>
-                            <li><a href="{% trans %}footer.symfony2bundles.url{% endtrans %}">{% trans %}footer.symfony2bundles.label{% endtrans %}</a></li>
+                            <li><a href="{{ path('symfony2bundles') }}">Symfony2bundles</a></li>
                             
                         </ul>
                     </dd>
